# ibkr-mcp

./: CLAUDE.md  Cargo.toml  README.md  start-if-needed.sh
src/: main.rs  server.rs
