[package]
name = "ibkr-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
ibapi = { version = "2.10", default-features = false, features = ["sync"] }
rmcp = { version = "1.3", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
